# foxg20project

./: CMakeLists.txt  Makefile.am  configure.ac  testhw.c  testusb.c
cmake/: Findlibusb-1.0.cmake  cmake_uninstall.cmake.in
